chore: fix base layout issues

--- a/inertia/css/app.css
+++ b/inertia/css/app.css
@@ -1,18 +1,7 @@
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
-
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html,
-body {
-  height: 100%;
-  width: 100%;
-}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
